ai-macros/tests/ui/missing_param_description.stderr
error: Parameter 'param2' is missing description in docstring. Add: 'param2: description'
 --> tests/ui/missing_param_description.rs:9:1
  |
9 | fn function_with_missing_desc(param1: String, param2: i32) -> String {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ToolFunction`, `error::LlmError`, and `types::Tool`
 --> tests/ui/missing_param_description.rs:2:16
  |
2 | use ai::core::{ToolFunction, types::Tool, error::LlmError};
  |                ^^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
